# cmake-native

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Core/: CMakeLists.txt
Core/includes/core/: Core.h  defs.h
Core/src/: Core.cpp
LoginServer/: CMakeLists.txt
LoginServer/src/: main.cpp
